<resources>
    <string name="app_name">Restaurant</string>
    <string name="login_txt"><b>Đăng nhập</b></string>
    <string name="register_txt"><b>Đăng ký</b></string>
    <string name="login_edit_text_hint">Nhập email hoặc số điện thoại</string>
    <string name="password_edit_text_hint">Nhập mật khẩu</string>
    <string name="full_name_edit_text_hint">Họ và Tên</string>
    <string name="phone_number_edit_text_hint">Số điện thoại</string>
    <string name="email_edit_text_hint">Email</string>
    <string name="has_account_text">Đã có tài khoản?</string>
    <string name="password_authentication_edit_text_hint">Nhập lại mật khẩu</string>
    <string name="user_information_txt">Thông tin người dùng</string>
    <string name="user_fullName">Nguyễn Văn A</string>
    <string name="account_phoneNumber_digits">0123456789</string>
    <string name="account_mail">nguyenvana@gmail.com</string>
    <string name="account_gender">Nam</string>
    <string name="account_birthday">01/01/2000</string>
    <string name="account_signal_levels">Đang hoạt động</string>
    <string name="forget_password_txt"><u>Quên mật khẩu?</u></string>

    <!-- Home Screen -->
    <string name="home_search_hint">Tìm kiếm…</string>
    <string name="home_menu_title">MENU</string>
    <string name="home_cart_icon_desc">Cart Icon</string>
    <string name="home_cart_quantity_default">12</string>
    <string name="home_view_order_button">Xem đơn hàng - 50.000đ</string>

    <!-- Payment History Screen -->
    <string name="payment_history_title">Lịch sử thanh toán</string>
    <string name="payment_history_order_id_prefix">Mã đơn #</string>
    <string name="payment_history_position_label">Vị trí : </string>
    <string name="payment_history_time_label">Thời gian : </string>
    <string name="payment_history_map_desc">Restaurant Map</string>
    <string name="payment_history_sample_order_id">191225-1492874983</string>
    <string name="payment_history_sample_date">19/12/2025</string>
    <string name="payment_history_sample_position">BÀN SỐ 4 - 4 Khách</string>
    <string name="payment_history_sample_time">19:30</string>

    <!-- Navigation -->
    <string name="nav_home">Trang chủ</string>
    <string name="nav_map">Gần bạn</string>
    <string name="nav_order">Đặt hàng</string>
    <string name="nav_notifications">Thông báo</string>
    <string name="nav_profile">Hồ sơ</string>
</resources>